# escrowsystem-fastapi-backend

./: .env  main.py  pyproject.toml
app/api/v1/: __init__.py  ai.py  blockchain.py
app/contracts/: compile_contract.py  escrow_contract.py
app/schemas/: ai_schema.py  blockchain_schema.py
app/services/: ai_service.py  blockchain_service.py
